tests/tests/ui/relation_has_one_invalid_pair_ty.stderr
error[E0599]: no method named `verify_pair_belongs_to_exists_for_user` found for struct `Profile` in the current scope
  --> tests/ui/relation_has_one_invalid_pair_ty.rs:8:5
   |
 8 |     profile: toasty::HasOne<Option<Profile>>,
   |     ^^^^^^^ method not found in `Profile`
...
12 | struct Profile {
   | -------------- method `verify_pair_belongs_to_exists_for_user` not found for this struct
